--- a/front/html/404.html
+++ b/front/html/404.html
@@ -45,8 +45,7 @@
       <div class="limitedWidthBlock" id="limitedWidthBlock">
         
         <div class="confirmation">
-          <p>Erreur !</p>
-          <a href="../index.html" class="btn btn-warning my-4">Revenir à l'accueil</a>
+          <a href="./index.html" class="btn">Revenir à l'accueil</a>
         </div>
 
       </div>
