--- a/front/html/404.html
+++ b/front/html/404.html
@@ -45,6 +45,7 @@
       <div class="limitedWidthBlock" id="limitedWidthBlock">
         
         <div class="confirmation">
+          <img id="erreur404" src="../images/2Error404.webp" alt="404">
           <a href="./index.html" class="btn">Revenir à l'accueil</a>
         </div>
 
